--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -13,6 +13,9 @@
                 <a class="nav-link"  routerLink="/articulos" title="Gestionar Articulos">Articulos</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link"  routerLink="/grupos" title="Gestionar Grupos">Grupos</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link"  routerLink="/articulosfamilias" title="Listado Articulos Familia">ArticulosFamilias</a>
             </li>
             <li class="nav-item dropdown">
