--- a/src/app/components/grupos/grupos.component.html
+++ b/src/app/components/grupos/grupos.component.html
@@ -1,4 +1,5 @@
-<table class="table table-striped">
+<button type="button" class="btn btn-primary" *ngIf = 'lista' (click) = 'alta()'>Alt</button>
+<table class="table table-striped" *ngIf = 'lista'>
   <thead>
     <tr>
       <th scope="col">Id</th>
@@ -14,3 +15,18 @@
     </tr>
   </tbody>
 </table>
+
+<form *ngIf = '!lista' [formGroup] = "fg">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Nivel</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" 
+    formControlName=' NivelGrupo'>
+    <small  class="form-text text-muted">Ingrese nivel del grupo</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Nombre</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" 
+    formControlName=' NombreGrupo'>
+    <small  class="form-text text-muted">Ingrese nombre del grupo</small>
+  </div>
+</form>
