--- a/src/app/components/grupos/grupos.component.html
+++ b/src/app/components/grupos/grupos.component.html
@@ -29,6 +29,6 @@
     formControlName=' NombreGrupo'>
     <small  class="form-text text-muted">Ingrese nombre del grupo</small>
   </div>
-  <button type="button" class="btn btn-success" (click) = 'guradar()'>Guardar</button>
+  <button type="button" class="btn btn-success" (click) = 'guardar()'>Guardar</button>
   <button type="button" class="btn btn-danger" (click) = 'cancelar()'>Cancelar</button>
 </form>
